tests improved